# leadpilot-backend

./: .dockerignore  .env.example  .gitignore  BACKEND_INTEGRATION.md  BACKEND_SECURITY_REVIEW.md  CHANGELOG.md  DEPLOY_COOLIFY.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  alembic.ini  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  start_backend.sh  start_frontend.sh
.github/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  TOPICS
alembic/: env.py
alembic/versions/: 001_add_processed_data_column.py  002_scenario_based_comparison.py  003_multi_simulation_support.py  20c47af31c71_add_error_message_to_agent_comparisons.py  962ea2614a41_add_current_phase_to_agent_comparisons.py  a1b2c3d4e5f6_add_organizations_users_org_id_on_leads.py  a7b8c9d0e1f2_leads_org_scoped_contact_key_unique.py  b2c3d4e5f6a7_add_org_scoping_and_lead_pipeline.py  b8c9d0e1f2a3_memory_bubbles_org_scoped_contact_key_unique.py  c3d4e5f6a7b8_add_org_knowledge_base_and_user_phone.py  c6352b5edd04_add_call_extracted_data_table.py  c9d0e1f2a3b4_add_org_logo_and_address.py  d4e5f6a7b8c9_add_attendance_table.py  e5f6a7b8c9d0_add_revenue_tracking.py  f6a7b8c9d0e1_add_must_reset_password_to_users.py  g7a8b9c0d1e2_add_lead_discount_tracking.py  h1a2b3c4d5e6_add_follow_ups_table.py  i2b3c4d5e6f7_backfill_lead_analysis_org_id.py  j3c4d5e6f7g8_add_relevance_reason.py  k4d5e6f7g8h9_add_audio_call_content_hash.py  l5e6f7g8h9i0_add_audio_call_contact_key.py  m6f7g8h9i0j1_add_org_strict_lead_scoping.py  n7g8h9i0j1k2_add_precall_brief.py  o8h9i0j1k2l3_widen_org_logo_url_to_text.py  p9i0j1k2l3m4_add_org_alert_config.py  q0j1k2l3m4n5_add_call_log.py  r1k2l3m4n5o6_add_lead_stage_changes.py
app/: __init__.py  config.py  database.py  main.py  models.py  ratelimit.py  schemas.py  schemas_attendance.py  schemas_auth.py  schemas_call_log.py  schemas_follow_up.py  schemas_team.py
app/api/: __init__.py  attendance.py  auth.py  call_log.py  calls.py  dashboard.py  follow_ups.py  team.py
app/utils/: __init__.py  gemini.py  lead_analyzer.py  (+10 more)
config/: agent_prompts.yaml  score_dimensions.json
docs/: AI_ENGINE_DECISION.md  DELIVERY_REPORT.md  HOW_SCORING_WORKS.md  LEAD_ASSIGNMENT_SPEC.md  SCORING_SPEC.md
scripts/: backfill_lead_assignment.py  cost_1hr.py  db_setup.py  gold_set_eval.py  import_audio.py  md_to_pdf.py  measure_cost.py  reprocess_all.py  reprocess_not_relevant.py  retranscribe_all.py  score_one.py  supabase_manual_migration.sql
tests/: conftest.py  test_auth_password.py  test_call_log.py  test_call_sentiment_label.py  test_pipeline_and_inbox.py  test_score_resilience.py
(+2 files in other folders)
